WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135480
Inspector highlights clipped at the bottom on the page in WK1 views with contentInsets
https://bugs.webkit.org/show_bug.cgi?id=135480
Summary
Inspector highlights clipped at the bottom on the page in WK1 views with cont...
Beth Dakin
Reported
2014-07-31 16:37:27 PDT
Inspector highlights are clipped at the bottom on the page in WK1 views with contentInsets. This is the WK1 versions of this bug:
https://bugs.webkit.org/show_bug.cgi?id=133818
It is reproducible in MiniBrowser on Yosemite at the bottom of any page. <
rdar://problem/17850323
>
Attachments
Patch
(12.78 KB, patch)
2014-07-31 16:57 PDT
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch with a new name
(12.89 KB, patch)
2014-08-01 12:15 PDT
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-07-31 16:57:20 PDT
Created
attachment 235860
[details]
Patch
Beth Dakin
Comment 2
2014-08-01 12:15:36 PDT
Created
attachment 235899
[details]
Patch with a new name Simon and I discussed the new name on IRC, and we like this better.
Simon Fraser (smfr)
Comment 3
2014-08-01 14:33:58 PDT
Comment on
attachment 235899
[details]
Patch with a new name View in context:
https://bugs.webkit.org/attachment.cgi?id=235899&action=review
Is this testable?
> Source/WebCore/platform/ScrollView.h:485 > IntRect platformVisibleContentRect(bool includeScrollbars) const; > IntSize platformVisibleContentSize(bool includeScrollbars) const; > + IntRect platformVisibleContentRectIncludingObscuredArea(bool includeScrollbars) const; > + IntSize platformVisibleContentSizeIncludingObscuredArea(bool includeScrollbars) const;
It almost feels like the "including obscured area" could be an enum param to platformVisibleContentRect/Size.
Beth Dakin
Comment 4
2014-08-01 15:41:18 PDT
Thanks Simon! Joe and I are still thinking about a test case…we haven't come up with one yet, but it would be very valuable. In terms of the enum parameter, I do think that is a really good idea, and I think we should consider it when we clean up these functions, which I really really want to do.
http://trac.webkit.org/changeset/171951
Beth Dakin
Comment 5
2014-08-01 15:49:13 PDT
Oops,
http://trac.webkit.org/changeset/171952
is needed too! It's critical, in fact! I accidentally had that part of the change reverted from when I was trying to see if the layout tests I was trying to make actually triggered a difference from this change.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug